--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   prepare:
-    runs-on: [ubuntu-22.04]
+    runs-on: [ubuntu-latest]
     outputs:
       version_tag: ${{ steps.version_tag.outputs.value }}
       build_date: ${{ steps.build_date.outputs.value }}
@@ -38,19 +38,24 @@ jobs:
   release:
     needs:
       - prepare
-    runs-on: [ ubuntu-22.04 ]
+    runs-on: [ ubuntu-latest ]
     env:
       VERSION_TAG: ${{ needs.prepare.outputs.version_tag }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Setup Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21.x"
+          go-version: 1.24
+          check-latest: true
+          cache: false
+          cache-dependency-path: |
+            go.sum
+            go.mod
 
       - name: Setup Git
         run: |
@@ -64,7 +69,7 @@ jobs:
           git push origin "refs/tags/$VERSION_TAG"
 
       - name: Create release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ env.VERSION_TAG }}
